@@ -29,6 +29,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #22982: Improve BOM handling when seeking to multiple positions of
+  a writable text file.
+
 - Issue #23865: close() methods in multiple modules now are idempotent and more
   robust at shutdown. If needs to release multiple resources, they are released
   even if errors are occured.
